myservice-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice-v1
  labels:
    app: myservice-v1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice-v1      
  template:
    metadata:
      labels:
        app: myservice-v1
        version: v1
    spec:     
      containers:
      - name: myservice-v1
        image: garyr/myservice:1.0.0 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: myservice-v1
spec:  
  selector:
    app: myservice-v1
  ports:      
    - port: 8080
      name: http
      targetPort: 8080
